--- a/.env.example
+++ b/.env.example
@@ -8,15 +8,7 @@ VITE_APP_ID=
 VITE_ALGOD_NODE_URL=https://testnet-api.algonode.cloud
 VITE_INDEXER_URL=https://testnet-idx.algonode.cloud
 
-# IPFS Provider Selection (pinata or nodely)
-VITE_IPFS_PROVIDER=pinata
-
-# Pinata Configuration (Legacy)
+# IPFS Configuration
 VITE_IPFS_GATEWAY_URL=https://gateway.pinata.cloud/ipfs/
 VITE_PINATA_API_KEY=
 VITE_PINATA_SECRET_KEY=
-
-# Nodely Configuration (New)
-VITE_NODELY_API_URL=https://api.nodely.io
-VITE_NODELY_GATEWAY_URL=https://gateway.nodely.io/ipfs/
-VITE_NODELY_API_KEY=
