--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@perawallet/connect": "^1.3.4",
     "algosdk": "^3.0.0",
     "axios": "^1.6.8",
+    "buffer": "^6.0.3",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
