Fix Nodely IPFS API endpoint URLs

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,6 @@ VITE_INDEXER_URL=https://testnet-idx.algonode.cloud
 
 # Nodely IPFS Configuration
 VITE_IPFS_GATEWAY_URL=https://ipfs.nodely.dev/ipfs/
-VITE_NODELY_API_URL=https://api.nodely.dev
+VITE_NODELY_API_URL=https://api.nodely.dev/v1
 VITE_NODELY_API_KEY=
 VITE_NODELY_PROJECT_ID=
