--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,6 @@ VITE_INDEXER_URL=https://testnet-idx.algonode.cloud
 VITE_IPFS_GATEWAY_URL=https://gateway.pinata.cloud/ipfs/
 VITE_PINATA_API_KEY=
 VITE_PINATA_SECRET_KEY=
+
+# Demo Mode (set to 'true' to enable dummy titles for demonstration)
+VITE_DEMO_MODE=true
